# kio

./: .gitignore  README.md  pyproject.toml
kio/: __main__.py  app.py
kio/api/: router.py
kio/api/health/: dependencies.py  router.py
kio/api/movie/: dependencies.py  router.py  schemas.py
kio/api/movie_api/: router.py
kio/api/user/: dependencies.py  router.py
kio/api/user_api/: router.py  schemas.py
kio/components/: __init__.py  settings.py
kio/db/repositories/: health_repository.py  movie_repository.py  user_repository.py
kio/exceptions/: __init__.py  codes.py  errors.py  handlers.py
kio/schemas/: __init__.py  api_response.py
kio/services/: crawlee_service.py  health_service.py  movie_service.py  playwright_search_service.py  user_service.py  voa_service.py
storage/key_value_stores/default/: __CRAWLER_STATISTICS_0  __CRAWLER_STATISTICS_0.__metadata__.json  __RQ_STATE_VYjCUFl6OLa8GDXKb  __RQ_STATE_VYjCUFl6OLa8GDXKb.__metadata__.json  __metadata__.json
storage/request_queues/default/: 011f0f1be192b9d.json  01d204ad4732471.json  071c1dccab217bf.json  0781a8dd16d216b.json  0a0ab13fdab9a7d.json  0a8c1a22b423b9c.json  0db1a2efe8801b4.json  10fc09a7308115f.json  12f7d30a581c394.json  137e4cd9d6f606f.json  13942da2c19a8e8.json  1896681e014a8e8.json  1b523c8d9c6f8c9.json  1f62d87929a2679.json  224ac5d9133bf0b.json  2265e3c82dbd367.json  23063183a7ee14b.json  24ac9493ba332a1.json  29b201bf126f0dc.json  2f95ce04623a382.json  31460dc326b2c85.json  327826784763634.json  3c7298251726199.json  (+73 more)
tests/: test_exceptions.py  test_health.py  test_kio_api.py
(+101 files in other folders)
