[project]
name = "kio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browserforge>=1.2.4",
    "bs4>=0.0.2",
    "crawlee>=1.6.0",
    "fastapi>=0.110",
    "parsel>=1.11.0",
    "playwright>=1.40",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
